Update logo image references in index.html

--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
 
     <header>
         <div class="logo-container">
-            <img src="logo.jpg" alt="Tr4ces Treatz Logo">
+            <img src="logo-1.jpg" alt="Tr4ces Treatz Logo">
         </div>
         <p class="header-tagline">Traditional Lolly Market Stall • Western Victoria</p>
     </header>
@@ -993,7 +993,7 @@
 
     <footer>
         <div class="footer-logo">
-            <img src="logo.jpg" alt="Tr4ces Treatz">
+            <img src="logo-1.jpg" alt="Tr4ces Treatz">
         </div>
         <div style="display: flex; justify-content: center; gap: 2rem; margin: 1.5rem 0; font-size: 1.8rem;">
             <a href="https://instagram.com/tr4cestreatz" target="_blank" style="color: var(--cream); transition: color 0.3s;" title="Instagram">📷</a>
