--- a/index.html
+++ b/index.html
@@ -575,6 +575,39 @@
             font-size: 0.95rem;
         }
 
+        .social-icons {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            margin: 1.5rem 0;
+        }
+
+        .social-icons a {
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: white;
+            border-radius: 50%;
+            transition: all 0.3s ease;
+            text-decoration: none;
+        }
+
+        .social-icons a:hover {
+            transform: translateY(-5px) scale(1.1);
+            box-shadow: 0 10px 30px rgba(255, 255, 255, 0.3);
+        }
+
+        .social-icons svg {
+            width: 28px;
+            height: 28px;
+        }
+
+        .social-icons a:hover svg {
+            transform: scale(1.1);
+        }
+
         .footer-divider {
             width: 100px;
             height: 2px;
@@ -929,17 +962,32 @@
 
         <section class="about" id="about">
             <h2 class="section-title">Our Story</h2>
-            <p class="section-subtitle">A small family operation bringing sweetness to Western Victoria</p>
+            <p class="section-subtitle">Your one-stop shop for all things sweet!</p>
 
             <div class="about-content">
                 <p>
-                    <strong>Tr4ces Treatz</strong> is a small family-run lolly stall bringing traditional confectionery 
-                    to the Western Victorian markets. We set up our stall at local markets and enjoy chatting with 
-                    the community about childhood favourites.
+                    Welcome to <strong>TR4CES TREATZ</strong>, your one-stop shop for all things sweet! We're here to 
+                    satisfy your cravings with a wide range of lollies, chocolates, drinks, and even other sweet delights.
                 </p>
                 <p>
-                    If you're looking for a particular sweet, come have a chat. We're always on the hunt for 
-                    rare and traditional treats.
+                    At TR4CES TREATZ, we believe that indulging in delicious treats should be a joyful experience. 
+                    That's why we carefully curate our selection to offer you the tastiest and highest quality goodies. 
+                    Whether you're in the mood for a decadent chocolate bar, a refreshing drink, or a mouthwatering sweet 
+                    treat, we've got something to satisfy every craving.
+                </p>
+                <p>
+                    We take pride in sourcing our products from trusted suppliers who share our commitment to quality and taste. 
+                    Our team is dedicated to providing you with exceptional customer service, ensuring that your shopping 
+                    experience is as delightful as the treats themselves.
+                </p>
+                <p>
+                    But it's not just about the treats at TR4CES TREATZ. We also care about creating a sense of community. 
+                    We love connecting with our customers and hearing about your favorite treats and memories associated with them. 
+                    So feel free to share your stories and tag us on social media using <strong>#TR4CESTREATZ</strong>
+                </p>
+                <p>
+                    Thank you for choosing TR4CES TREATZ as your go-to online store for all your sweet desires. 
+                    We can't wait to bring a little bit of sweetness into your life. Happy shopping!
                 </p>
                 <p style="margin-top: 2rem; font-size: 0.95rem; font-style: italic; color: #666;">
                     <strong>Note:</strong> If you have lollies you'd like us to sell at our stall, 
@@ -995,10 +1043,22 @@
         <div class="footer-logo">
             <img src="logo-1.jpg" alt="Tr4ces Treatz">
         </div>
-        <div style="display: flex; justify-content: center; gap: 2rem; margin: 1.5rem 0; font-size: 1.8rem;">
-            <a href="https://instagram.com/tr4cestreatz" target="_blank" style="color: var(--cream); transition: color 0.3s;" title="Instagram">📷</a>
-            <a href="https://facebook.com/tr4cestreatz" target="_blank" style="color: var(--cream); transition: color 0.3s;" title="Facebook">👍</a>
-            <a href="https://tiktok.com/@tr4cestreatz" target="_blank" style="color: var(--cream); transition: color 0.3s;" title="TikTok">🎵</a>
+        <div class="social-icons">
+            <a href="https://instagram.com/tr4cestreatz" target="_blank" title="Instagram">
+                <svg fill="#E1306C" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                </svg>
+            </a>
+            <a href="https://facebook.com/tr4cestreatz" target="_blank" title="Facebook">
+                <svg fill="#1877F2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                </svg>
+            </a>
+            <a href="https://tiktok.com/@tr4cestreatz" target="_blank" title="TikTok">
+                <svg fill="#000000" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"/>
+                </svg>
+            </a>
         </div>
         <div class="footer-divider"></div>
         <p><strong>Tr4ces Treatz</strong> • Traditional Lolly Market Stall</p>
