Fix HTML structure and add event card section

--- a/index.html
+++ b/index.html
@@ -832,6 +832,13 @@
                     <p class="market-date">Shop Anytime</p>
                     <p>Browse our full range at<br>www.tr4cestreatz.com</p>
                 </div>
+
+                <div class="market-card">
+                    <img src="carols-event.jpg" alt="Carols by Candlelight" style="width: 100%; height: auto; border-radius: 10px; margin-bottom: 1rem;">
+                    <h3>Carols by Candlelight</h3>
+                    <p class="market-date">Community Events</p>
+                    <p>We love supporting local Horsham events! Follow us to see where we'll be next 🎄✨</p>
+                </div>
             </div>
         </section>
 
@@ -1129,5 +1136,5 @@
             observer.observe(card);
         });
     </script>
-</body> 
+</body>
 </html>
