--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
                 </div>
 
                 <div class="market-card">
-                    <img src="carols-event.jpg" alt="Carols by Candlelight" style="width: 100%; height: auto; border-radius: 10px; margin-bottom: 1rem;">
+                    <img src="media-1935676352.jpeg" alt="Carols by Candlelight" style="width: 100%; height: auto; border-radius: 10px; margin-bottom: 1rem;">
                     <h3>Carols by Candlelight</h3>
                     <p class="market-date">Community Events</p>
                     <p>We love supporting local Horsham events! Follow us to see where we'll be next 🎄✨</p>
@@ -1123,7 +1123,7 @@
         const observer = new IntersectionObserver(function(entries) {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
-                    entry.target.style.opacity = '1'; 
+                    entry.target.style.opacity = '1';
                     entry.target.style.transform = 'translateY(0)';
                 }
             });
