Add Horsham Fishing Comp market card to index.html
Added a new market card for the Horsham Fishing Competition.

--- a/index.html
+++ b/index.html
@@ -839,6 +839,13 @@
                     <p class="market-date">Community Events</p>
                     <p>We love supporting local Horsham events! Follow us to see where we'll be next 🎄✨</p>
                 </div>
+
+                <div class="market-card">
+                    <img src="horsham-fishing-competition.png" alt="Get Hooked on the Horsham Fishing Comp" style="width: 100%; height: auto; border-radius: 10px; margin-bottom: 1rem;">
+                    <h3>Horsham Fishing Comp</h3>
+                    <p class="market-date">Community Events</p>
+                    <p>Get hooked on the fun! We'll be at the Horsham Fishing Competition bringing sweet treats for all the anglers 🎣🍬</p>
+                </div>
             </div>
         </section>
 
