Add special events image to index.html

--- a/index.html
+++ b/index.html
@@ -820,6 +820,7 @@
                 </div>
 
                 <div class="market-card">
+                    <img src="special.jpg" alt="Special Events" style="width: 100%; height: auto; border-radius: 10px; margin-bottom: 1rem;">
                     <div class="market-icon">🎪</div>
                     <h3>Special Events</h3>
                     <p class="market-date">Community Fairs</p>
