--- a/index.html
+++ b/index.html
@@ -847,6 +847,13 @@
                     <p class="market-date">Community Events</p>
                     <p>Get hooked on the fun! We'll be at the Horsham Fishing Competition bringing sweet treats for all the anglers 🎣🍬</p>
                 </div>
+
+                <div class="market-card">
+                    <img src="loolied.jpg" alt="Birthday Parties" style="width: 100%; height: auto; border-radius: 10px; margin-bottom: 1rem;">
+                    <h3>Birthday Parties</h3>
+                    <p class="market-date">Private Events</p>
+                    <p>Make your party extra sweet! We provide lolly buffets and party packages for birthdays and special celebrations 🎂🎈🍬</p>
+                </div>
             </div>
         </section>
 
