Change header from 'Easter Festivals' to 'Festivals'

--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
                 <div class="market-card" onclick="toggleCard(this)">
                     <div class="market-icon">🐰</div>
                     <div class="market-card-header">
-                        <h3>Easter Festivals</h3>
+                        <h3>Festivals</h3>
                         <span class="expand-icon">▼</span>
                     </div>
                     <p class="market-date">Seasonal Events</p>
