--- a/index.html
+++ b/index.html
@@ -800,103 +800,63 @@
 
         <section class="market-stall" id="locations">
             <h2 class="section-title">Visit Our Market Stall</h2>
-            <p class="section-subtitle">Click any card to see more details</p>
+            <p class="section-subtitle">Where tradition meets your sweet tooth</p>
 
             <div class="market-grid">
-                <div class="market-card" onclick="toggleCard(this)">
+                <div class="market-card">
                     <div class="market-icon">🏪</div>
-                    <div class="market-card-header">
-                        <h3>Western Victorian Markets</h3>
-                        <span class="expand-icon">▼</span>
-                    </div>
+                    <h3>Western Victorian Markets</h3>
                     <p class="market-date">Various Locations</p>
-                    <div class="market-details">
-                        <p>We pop up at markets throughout Western Victoria including Horsham. Check TikTok for current dates!</p>
-                    </div>
+                    <p>We pop up at markets throughout Western Victoria including Horsham. Check TikTok for current dates!</p>
                 </div>
 
-                <div class="market-card" onclick="toggleCard(this)">
+                <div class="market-card">
                     <img src="special.jpg" alt="Special Events">
-                    <div class="market-card-header">
-                        <h3>Special Events</h3>
-                        <span class="expand-icon">▼</span>
-                    </div>
+                    <h3>Special Events</h3>
                     <p class="market-date">Community Gatherings</p>
-                    <div class="market-details">
-                        <p>Find us at local festivals, fairs, and community events. We love being part of your special occasions!</p>
-                    </div>
+                    <p>Find us at local festivals, fairs, and community events. We love being part of your special occasions!</p>
                 </div>
 
-                <div class="market-card" onclick="toggleCard(this)">
+                <div class="market-card">
                     <div class="market-icon">🐰</div>
-                    <div class="market-card-header">
-                        <h3>Festivals</h3>
-                        <span class="expand-icon">▼</span>
-                    </div>
+                    <h3>Festivals</h3>
                     <p class="market-date">Seasonal Events</p>
-                    <div class="market-details">
-                        <p>Hop on over for Easter fun! We bring the sweetest treats to Easter festivals, egg hunts, and spring celebrations 🐰🥚🍬</p>
-                    </div>
+                    <p>Hop on over for Easter fun! We bring the sweetest treats to Easter festivals, egg hunts, and spring celebrations 🐰🥚🍬</p>
                 </div>
 
-                <div class="market-card" onclick="toggleCard(this)">
+                <div class="market-card">
                     <div class="market-icon">💼</div>
-                    <div class="market-card-header">
-                        <h3>Corporate / Business Events</h3>
-                        <span class="expand-icon">▼</span>
-                    </div>
+                    <h3>Corporate / Business Events</h3>
                     <p class="market-date">Professional Catering</p>
-                    <div class="market-details">
-                        <p>Make your corporate event memorable! We provide lolly bars, gift packages, and sweet catering 💼🍬</p>
-                    </div>
+                    <p>Make your corporate event memorable! We provide lolly bars, gift packages, and sweet catering 💼🍬</p>
                 </div>
 
-                <div class="market-card" onclick="toggleCard(this)">
+                <div class="market-card">
                     <div class="market-icon">🌐</div>
-                    <div class="market-card-header">
-                        <h3>Online Store</h3>
-                        <span class="expand-icon">▼</span>
-                    </div>
+                    <h3>Online Store</h3>
                     <p class="market-date">Shop Anytime</p>
-                    <div class="market-details">
-                        <p>Browse our full range at www.tr4cestreatz.com</p>
-                    </div>
+                    <p>Browse our full range at www.tr4cestreatz.com</p>
                 </div>
 
-                <div class="market-card" onclick="toggleCard(this)">
+                <div class="market-card">
                     <img src="media-1935676352.jpeg" alt="Carols by Candlelight">
-                    <div class="market-card-header">
-                        <h3>Carols by Candlelight</h3>
-                        <span class="expand-icon">▼</span>
-                    </div>
+                    <h3>Carols by Candlelight</h3>
                     <p class="market-date">Community Events</p>
-                    <div class="market-details">
-                        <p>We love supporting local Horsham events! Follow us to see where we'll be next 🎄✨</p>
-                    </div>
+                    <p>We love supporting local Horsham events! Follow us to see where we'll be next 🎄✨</p>
                 </div>
 
-                <div class="market-card" onclick="toggleCard(this)">
+                <div class="market-card">
                     <img src="horsham-fishing-competition.png" alt="Horsham Fishing Comp">
-                    <div class="market-card-header">
-                        <h3>Horsham Fishing Comp</h3>
-                        <span class="expand-icon">▼</span>
-                    </div>
+                    <h3>Horsham Fishing Comp</h3>
                     <p class="market-date">Community Events</p>
-                    <div class="market-details">
-                        <p>Get hooked on the fun! We'll be at the Horsham Fishing Competition 🎣🍬</p>
-                    </div>
+                    <p>Get hooked on the fun! We'll be at the Horsham Fishing Competition 🎣🍬</p>
                 </div>
 
-                <div class="market-card" onclick="toggleCard(this)">
+                <div class="market-card">
                     <img src="loolied.jpg" alt="Birthday Parties">
-                    <div class="market-card-header">
-                        <h3>Birthday Parties</h3>
-                        <span class="expand-icon">▼</span>
-                    </div>
+                    <h3>Birthday Parties</h3>
                     <p class="market-date">Private Events</p>
-                    <div class="market-details">
-                        <p>Make your party extra sweet! We provide lolly buffets and party packages 🎂🎈🍬</p>
-                    </div>
+                    <p>Make your party extra sweet! We provide lolly buffets and party packages 🎂🎈🍬</p>
                 </div>
             </div>
         </section>
