--- a/index.html
+++ b/index.html
@@ -750,14 +750,293 @@
         }
 
         @media (max-width: 768px) {
+            /* Reduce awning height on mobile */
+            .awning {
+                height: 60px;
+            }
+
+            /* Header adjustments */
+            header {
+                padding: 1.5rem 3%;
+            }
+
+            .logo-container {
+                max-width: 320px;
+            }
+
+            .header-tagline {
+                font-size: 1.1rem;
+            }
+
+            /* Navigation - mobile friendly */
+            nav {
+                padding: 0.8rem 3%;
+            }
+
+            .nav-links {
+                gap: 1.5rem;
+                font-size: 0.85rem;
+            }
+
+            .nav-links a {
+                padding: 0.3rem 0;
+            }
+
+            /* Hero section */
+            .hero {
+                padding: 3rem 5%;
+            }
+
             .hero h1 {
                 font-size: 2rem;
             }
+
+            .hero .location {
+                font-size: 1.2rem;
+            }
+
+            .hero p {
+                font-size: 1.05rem;
+            }
+
+            .vintage-badge {
+                font-size: 0.8rem;
+                padding: 0.4rem 1.5rem;
+            }
+
             .cta-group {
                 flex-direction: column;
+                gap: 1rem;
             }
+
             .btn {
                 width: 100%;
+                padding: 0.9rem 2rem;
+            }
+
+            /* Main content */
+            main {
+                padding: 0 3%;
+            }
+
+            .divider {
+                margin: 2rem 0;
+                font-size: 1.5rem;
+            }
+
+            /* Market stall section */
+            .market-stall {
+                padding: 3rem 0;
+                margin: 2rem -5vw;
+                padding-left: 5vw;
+                padding-right: 5vw;
+            }
+
+            .section-title {
+                font-size: 2rem;
+                margin-bottom: 0.8rem;
+            }
+
+            .section-subtitle {
+                font-size: 1rem;
+                margin-bottom: 2rem;
+            }
+
+            /* Market grid - single column on mobile */
+            .market-grid {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+                margin-top: 2rem;
+            }
+
+            .market-card {
+                padding: 2rem 1.5rem;
+            }
+
+            .market-card h3 {
+                font-size: 1.5rem;
+            }
+
+            .market-date {
+                font-size: 0.95rem;
+            }
+
+            .market-card p {
+                font-size: 0.95rem;
+            }
+
+            .market-icon {
+                font-size: 3rem;
+                margin-bottom: 1rem;
+            }
+
+            /* Products section */
+            .products {
+                padding: 3rem 0;
+            }
+
+            .products-grid {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+                margin-top: 2rem;
+            }
+
+            .product-card {
+                max-width: 400px;
+                margin: 0 auto;
+            }
+
+            .product-image {
+                height: 200px;
+            }
+
+            .product-info {
+                padding: 1.5rem;
+            }
+
+            .product-name {
+                font-size: 1.4rem;
+            }
+
+            .product-description {
+                font-size: 0.9rem;
+            }
+
+            .product-price {
+                font-size: 1.8rem;
+            }
+
+            /* About section */
+            .about {
+                padding: 3rem 0;
+                margin: 2rem -5vw;
+                padding-left: 5vw;
+                padding-right: 5vw;
+            }
+
+            .about-content {
+                padding: 2rem 1.5rem;
+                margin: 2rem auto 0;
+            }
+
+            .about-content p {
+                font-size: 1rem;
+            }
+
+            .signature {
+                font-size: 1.6rem;
+            }
+
+            /* Contact section */
+            .contact {
+                padding: 3rem 0;
+            }
+
+            .contact-grid {
+                grid-template-columns: 1fr;
+                gap: 1.5rem;
+                margin-top: 2rem;
+            }
+
+            .contact-card {
+                padding: 2rem;
+            }
+
+            .contact-card h3 {
+                font-size: 1.2rem;
+            }
+
+            .contact-card p,
+            .contact-card a {
+                font-size: 0.95rem;
+            }
+
+            /* Footer */
+            footer {
+                padding: 2.5rem 5%;
+                margin-top: 3rem;
+            }
+
+            .footer-logo {
+                max-width: 220px;
+            }
+
+            footer p {
+                font-size: 0.9rem;
+            }
+
+            .social-icons {
+                gap: 1.5rem;
+            }
+
+            .social-icons a {
+                width: 45px;
+                height: 45px;
+            }
+
+            .social-icons svg {
+                width: 24px;
+                height: 24px;
+            }
+
+            /* Scroll to top button - smaller on mobile */
+            .scroll-top {
+                width: 50px;
+                height: 50px;
+                bottom: 20px;
+                right: 20px;
+                font-size: 1.5rem;
+            }
+
+            /* Ensure images don't overflow */
+            img {
+                max-width: 100%;
+                height: auto;
+            }
+
+            /* Better touch targets */
+            a, button {
+                min-height: 44px;
+                min-width: 44px;
+            }
+        }
+
+        /* Tablet adjustments */
+        @media (min-width: 769px) and (max-width: 1024px) {
+            .market-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .products-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .contact-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        /* Small mobile devices */
+        @media (max-width: 480px) {
+            .hero h1 {
+                font-size: 1.8rem;
+            }
+
+            .hero .location {
+                font-size: 1.1rem;
+            }
+
+            .nav-links {
+                gap: 1rem;
+                font-size: 0.8rem;
+            }
+
+            .market-card {
+                padding: 1.5rem 1rem;
+            }
+
+            .section-title {
+                font-size: 1.8rem;
             }
         }
     </style>
