--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,7 @@
                 </div>
 
                 <div class="market-card">
+                    <img src="corporate.jpg" alt="Corporate / Business Events">
                     <div class="market-icon">💼</div>
                     <h3>Corporate / Business Events</h3>
                     <p class="market-date">Professional Catering</p>
