--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                     <img src="corporate.jpg" alt="Corporate / Business Events">
                     <h3>Corporate / Business Events</h3>
                     <p class="market-date">Professional Catering</p>
-                    <p>Make your corporate event memorable! We provide lolly bars, gift packages, and sweet catering 💼🍬</p>
+                    <p>Make your corporate event memorable! We provide lolly bars, gift packages, and sweet catering 🍬</p>
                 </div>
 
                 <div class="market-card">
