Add Wimmera Steampunk Festival market card
Added a new market card for the 2025 Wimmera Steampunk Festival with details about the event and included an image.

--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,13 @@
                 </div>
 
                 <div class="market-card">
+                    <img src="dimmy.jpeg" alt="Wimmera Steampunk Festival">
+                    <h3>2025 Wimmera Steampunk Festival</h3>
+                    <p class="market-date">Special Event</p>
+                    <p>Step back in time with sweet treats! Join us at the Wimmera Steampunk Festival for vintage lollies and Victorian-era confectionery 🎩⚙️🍬</p>
+                </div>
+
+                <div class="market-card">
                     <img src="corporate.jpg" alt="Corporate / Business Events">
                     <h3>Corporate / Business Events</h3>
                     <p class="market-date">Professional Catering</p>
