--- a/index.html
+++ b/index.html
@@ -309,7 +309,6 @@
             transition: all 0.3s ease;
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
             position: relative;
-            cursor: pointer;
             opacity: 0;
             transform: translateY(50px);
         }
@@ -323,18 +322,6 @@
                 opacity: 1;
                 transform: translateY(0);
             }
-        }
-
-        .market-card::before {
-            content: '';
-            position: absolute;
-            top: -15px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 60px;
-            height: 30px;
-            background: var(--vintage-red);
-            clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
 
         .market-card:hover {
@@ -1057,7 +1044,7 @@
             <li><a href="#locations">Market Locations</a></li>
             <li><a href="#products">Our Lollies</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact">Bookings</a></li>
         </ul>
     </nav>
 
@@ -1104,15 +1091,15 @@
                 </div>
 
                 <div class="market-card">
-                    <img src="dimmy.jpeg" alt="Wimmera Steampunk Festival">
+                    <img src="dim.jpg" alt="Wimmera Steampunk Festival">
                     <h3>2025 Wimmera Steampunk Festival</h3>
                     <p class="market-date">Special Event</p>
                     <p>Step back in time with sweet treats! Join us at the Wimmera Steampunk Festival for vintage lollies and Victorian-era confectionery 🎩⚙️🍬</p>
                 </div>
 
                 <div class="market-card">
-                    <img src="corporate.jpg" alt="Corporate / Business Events">
-                    <h3>Corporate / Business Events</h3>
+                    <img src="corporate.jpg" alt="Corporate Events">
+                    <h3>Corporate Events</h3>
                     <p class="market-date">Professional Catering</p>
                     <p>Make your corporate event memorable! We provide lolly bars, gift packages, and sweet catering 🍬</p>
                 </div>
@@ -1302,7 +1289,7 @@
         <div class="divider">❦ ❦ ❦</div>
 
         <section class="contact" id="contact">
-            <h2 class="section-title">Get in Touch</h2>
+            <h2 class="section-title">Bookings</h2>
             <p class="section-subtitle">We'd love to hear from you</p>
 
             <div class="contact-grid">
@@ -1320,7 +1307,7 @@
 
                 <div class="contact-card">
                     <div class="contact-icon">📧</div>
-                    <h3>Contact</h3>
+                    <h3>Enquiries</h3>
                     <p>Visit our website for details</p>
                 </div>
 
