--- a/index.html
+++ b/index.html
@@ -1070,6 +1070,7 @@
 
             <div class="market-grid">
                 <div class="market-card">
+                    <img src="market2.jpg" alt="Western Victorian Markets">
                     <div class="market-icon">🏪</div>
                     <h3>Western Victorian Markets</h3>
                     <p class="market-date">Various Locations</p>
@@ -1084,6 +1085,7 @@
                 </div>
 
                 <div class="market-card">
+                    <img src="market.jpg" alt="Festivals">
                     <div class="market-icon">🐰</div>
                     <h3>Festivals</h3>
                     <p class="market-date">Seasonal Events</p>
