--- a/index.html
+++ b/index.html
@@ -1107,13 +1107,6 @@
                 </div>
 
                 <div class="market-card">
-                    <div class="market-icon">🌐</div>
-                    <h3>Online Store</h3>
-                    <p class="market-date">Shop Anytime</p>
-                    <p>Browse our full range at www.tr4cestreatz.com</p>
-                </div>
-
-                <div class="market-card">
                     <img src="media-1935676352.jpeg" alt="Carols by Candlelight">
                     <h3>Carols by Candlelight</h3>
                     <p class="market-date">Community Events</p>
@@ -1132,6 +1125,13 @@
                     <h3>Birthday Parties</h3>
                     <p class="market-date">Private Events</p>
                     <p>Make your party extra sweet! We provide lolly buffets and party packages 🎂🎈🍬</p>
+                </div>
+
+                <div class="market-card">
+                    <img src="snakes-4207218077.jpg" alt="Online Store">
+                    <h3>Online Store</h3>
+                    <p class="market-date">Shop Anytime</p>
+                    <p>Browse our full range at www.tr4cestreatz.com</p>
                 </div>
             </div>
         </section>
