--- a/index.html
+++ b/index.html
@@ -1350,7 +1350,9 @@
 
             <div class="products-grid">
                 <div class="product-card">
-                    <div class="product-image">🦷</div>
+                    <div class="product-image">
+                        <img src="teeth.jpg" alt="Teeth">
+                    </div>
                     <div class="product-info">
                         <span class="product-badge">Novelty</span>
                         <h3 class="product-name">Teeth</h3>
@@ -1528,12 +1530,6 @@
             <p class="section-subtitle">We'd love to hear from you</p>
 
             <div class="contact-grid">
-                <div class="contact-card">
-                    <div class="contact-icon">🌐</div>
-                    <h3>Website</h3>
-                    <p><a href="https://www.tr4cestreatz.com" target="_blank">www.tr4cestreatz.com</a></p>
-                </div>
-
                 <div class="contact-card">
                     <div class="contact-icon">📱</div>
                     <h3>Social Media</h3>
